fix: z-index issues, user menu was getting hidden, fixed a useRef issue related to sensing click outside a dropdown and closing it

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,7 @@
 
 nav {
     /*this lives inside the #root*/
+    z-index: 2000;
     position: fixed;
     top: 0;
     margin: 0;
@@ -25,7 +26,7 @@ nav {
     /*border-bottom: 2px solid var(--border);*/
     /*border-radius: 0 0 10px;*/
     border-bottom: 2px solid var(--border);
-    z-index: 1000;
+    /*z-index: 1000;*/
     transition: 200ms all ease;
     background-color: var(--bg-secondary);
     /*background-color: var(--bg);*/
@@ -241,13 +242,14 @@ textarea.input-class {
 }
 .mobile-dropdown {
     width: 100%;
-    /*border: 2px solid var(--border);*/
+    border: 2px solid var(--border);
     z-index: 1001;
     position: sticky;
-    top: 100px;
+    top: 110px;
     padding: 10px;
     margin-bottom: 3rem;
     background-color: var(--bg-secondary);
+    border-radius: 15px;
 }
 .mobile-dropdown-topsection {
     display: flex;
@@ -688,7 +690,6 @@ textarea.input-class {
 
 .user-menu {
     transition: 0.2s all ease;
-    z-index: 10;
     position: absolute;
     top: 100%;
     right: 0;
