--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,10 +65,16 @@
 html {
     scrollbar-gutter: stable;
 }
+/*html.no-scroll {
+    overflow: hidden;
+}*/
 body {
     margin: 0;
     min-height: 100vh;
     background-color: var(--bg);
+}
+body.no-scroll {
+    overflow: hidden;
 }
 
 h1 {
